Update extensions UX
